# opengl_playground

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  logs.h  main.cpp  math_utils.cpp  math_utils.h  program.cpp  program.h  run.sh  shader_utils.cpp  shader_utils.h  vertex.h
shaders/: fragment.glsl  vertex.glsl
